# oneapi_hackathon

./: CMakeLists.txt  LICENSE  compare.c  fftw_plan_dft_r2c_2d.c  random_number_generator.c
